plugins {
    id 'com.github.johnrengelman.shadow' version '7.0.0'
    id 'java'
}

group = 'me.lulu'
version = '1.2.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(16)
    }
}
repositories {
    mavenCentral()
    mavenLocal()
    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
    maven { url = 'https://oss.sonatype.org/content/repositories/central' }
    flatDir { dir("./libs") }
}

dependencies {
    implementation 'me.lulu:DatouNms:1.0.0'

    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'

    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
}

tasks.withType(JavaCompile).configureEach {
    options.forkOptions.jvmArgs.addAll(['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'])
}

shadowJar {
    relocate("me.lulu.datounms", "me.lulu.biomereplacer.nms")
}
